css/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

html body * {
  font-family: "Roboto", sans-serif, -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
    "Segoe UI Emoji", "Segoe UI Symbol";
  box-sizing: border-box;
}

img {
  width: 100%;
  height: auto;
}

.project-block > div button,
span.sb-icon,
.search-icon,
.notify-icon {
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  position: relative;
}

/* Variables =============================== */
:root {
  /* Colors */
  --blue-color: #1992d3;
  --yellow-color: #f0b329;
  --lightgrey-color: #e1e8ef;
  --white-color: #ffffff;
  --grey-color: #636363;
  --black-color: #000000;

  /* Measurements */
  font-size: 16px;
  --sb-h1-size: 1.8rem;
  --sb-span-size: 1.35rem;
  --h-btn-size: 1rem;
  --txt-115-size: 1.15rem;

  /* Effects */
  --weight-500: 500;
  --card-radius: 6px;
  --px22-space: 22px;
}

/* Container */
.container {
  display: grid;
  height: 100vh;
  grid-template-columns: 1fr 4fr;
  grid-template-rows: 1fr 5fr;
}

/* Header */
.header {
  grid-area: 1 / 2 / 2 / 3;
  display: grid;
  /* grid-template-rows: repeat(2, 1fr); */
  gap: 12px;
  padding: 16px 44px;
  background-color: var(--white-color);
  z-index: 2;
  -webkit-box-shadow: 0px 0px 5px 5px #ccd1d9;
  box-shadow: 0px 0px 5px 5px #ccd1d9;
}

.h-top {
  display: grid;
  grid-template-columns: 24px 5.5fr 24px 52px 1.4fr;
  grid-auto-rows: max-content;
  /* height: 50px; */
  gap: 22px;
  align-items: center;
  align-content: center;
}

.h-btm {
  display: grid;
  grid-template-columns: 2fr 1fr;
}

/* .user-info {
  display: grid;
  grid-template-columns: 1fr 2fr;
  align-content: center;
} */

.user-info .user-dp {
  grid-column: 1 / 2;
  grid-row: 1 / 3;
}

.h-btm-buttons {
  display: grid;
  grid-template-columns: repeat(3, 100px);
  gap: 28px;
  align-items: center;
  justify-content: center;
}

.h-btm-buttons button {
  height: 40px;
  border-radius: 40px;
  border: none;
  background-color: var(--blue-color);
  color: var(--white-color);
  font-weight: var(--weight-500);
  font-size: var(--h-btn-size);
  cursor: pointer;
}

/* Header Content */
.search-icon {
  background-image: url("../img/magnify.svg");
}
.notify-icon {
  background-image: url("../img/bell-ring-outline.svg");
}
.h-top input {
  border: none;
  padding: 0;
  height: 100%;
  width: 100%;
  background-color: unset;
  cursor: pointer;
  border-radius: 50%;
}

input[type="search"] {
  background-color: var(--lightgrey-color);
  border-radius: 50px;
  height: 32px;
  max-width: 618px;
  width: 100%;
  padding: 10px;
}

.h-top .user {
  font-size: 1.18rem;
  font-weight: var(--weight-500);
}

.user-info {
  display: grid;
  grid-template-columns: 80px auto;
  gap: 10px;
  align-content: center;
  justify-items: left;
}

.user-info a {
  grid-area: 1 / 1 / 3 / 2;
  height: 100%;
  width: 100%;
}

.user-info .intro {
  display: flex;
  align-items: end;
  font-size: 0.9rem;
  font-weight: var(--weight-500);
}

.h-btm .user {
  font-weight: var(--weight-500);
  font-size: 1.54rem;
}

/* Sidebar */
.sidebar {
  grid-area: 1 / 1 / 3 / 2;
  display: grid;
  grid-template-rows: repeat(3, max-content);
  row-gap: 52px;
  padding: 22px;
  background-color: var(--blue-color);
  z-index: 3;
}

.sidebar .sb-options,
.sidebar .sb-settings {
  display: grid;
  gap: 22px;
}

/* Sidebar Content */
.sb-logo a,
.sb-options a,
.sb-settings a {
  display: grid;
  /* width: 100%; */
  background-color: transparent;
  border: none;
  grid-template-columns: 50px auto;
  grid-auto-rows: 26px;
  align-items: center;
  cursor: pointer;
  color: var(--white-color);
  text-align: left;
  padding: 0;
  gap: 14px;
}

.sb-logo a {
  grid-auto-rows: 50px;
}

ul.sb-options {
  margin-bottom: 22px;
}

span.sb-icon {
  width: 100%;
  height: 100%;
}

span.logo {
  background-image: url("../img/view-dashboard.svg");
}
span.home {
  background-image: url("../img/home.svg");
}
span.prof {
  background-image: url("../img/account.svg");
}
span.msg {
  background-image: url("../img/forum.svg");
}
span.hist {
  background-image: url("../img/history.svg");
}
span.task {
  background-image: url("../img/check-circle.svg");
}
span.comm {
  background-image: url("../img/account-multiple.svg");
}
span.sett {
  background-image: url("../img/cog-outline.svg");
}
span.supp {
  background-image: url("../img/help-rhombus.svg");
}
span.priv {
  background-image: url("../img/security.svg");
}

.sb-logo h1 {
  font-size: var(--sb-h1-size);
  font-weight: var(--weight-500);
}

.sidebar li a {
  font-size: var(--sb-span-size);
  font-weight: var(--weight-500);
}

/* Content */
.content {
  grid-area: 2 / 2 / 3 / 3;
  display: grid;
  grid-template-columns: 2.7fr 1fr;
  grid-template-rows: 1fr 1fr;
  padding: 38px 32px 32px 20px;
  gap: 22px;
  row-gap: 40px;
  background-color: var(--lightgrey-color);
  z-index: 1;
}

.content-project {
  grid-area: 1 / 1 / 3 / 2;
}

.announcements {
  grid-area: 1 / 2 / 2 / 3;
  display: grid;
  grid-template-rows: max-content auto;
}

.trending {
  grid-area: 2 / 2 / 3 / 3;
  display: grid;
  grid-template-rows: max-content auto;
}

.projects {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-auto-rows: 222px;
  row-gap: 30px;
  column-gap: 24px;
}

/* Content Contents */
.content .title {
  font-size: 1.28rem;
  font-weight: var(--weight-500);
  margin-bottom: 14px;
}

.projects .project-block {
  background-color: var(--white-color);
  border-left: 8px var(--yellow-color) solid;
  border-radius: 8px;
  padding: var(--px22-space);
  position: relative;
  -webkit-box-shadow: 5px 5px 5px -2px #ccd1d9;
  box-shadow: 5px 5px 5px -2px #ccd1d9;
}

.project-block h3 {
  font-weight: var(--weight-500);
  font-size: var(--txt-115-size);
  margin-bottom: 10px;
}

.project-block p {
  color: var(--grey-color);
  line-height: 1.2;
  font-size: var(--h-btn-size);
}
.project-block > div {
  font-size: 0;
  position: absolute;
  bottom: var(--px22-space);
  right: var(--px22-space);
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 28px;
  margin: 0 16px;
}

.project-block > div button {
  border: 0;
  margin: 0;
  font-size: 0;
  padding: 12px;
  color: var(--white-color);
  background-color: var(--white-color);
  cursor: pointer;
}

.watch {
  background-image: url("../img/eye-plus-outline.svg");
}

.star {
  background-image: url("../img/star-plus-outline.svg");
}

.share {
  background-image: url("../img/share.svg");
}

/* Sidebar - right */
.announce-list,
.trending-list {
  background-color: var(--white-color);
  padding: var(--px22-space);
  border-radius: 8px;
  -webkit-box-shadow: 5px 5px 5px -2px #ccd1d9;
  box-shadow: 5px 5px 5px -2px #ccd1d9;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.announce-list li {
  /* border-bottom: 1px solid #d2d2d2; */
  color: var(--grey-color);
  padding: 0 6px;
  margin: 0 6px;
}
.announce-list li:first-child {
  margin-top: 12px;
}
.announce-list li:last-child {
  border: none;
  margin-bottom: 6px;
  padding-bottom: 0;
}

.announce-list li h5 {
  color: var(--black-color);
  font-size: 0.9rem;
  font-weight: var(--weight-500);
  margin-bottom: 5px;
}
.announce-list li p {
  font-size: 0.77rem;
  line-height: 1.1;
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}
.announce-list hr {
  background-color: #d2d2d2;
  height: 1px;
  border: 0;
  margin: 6px;
}

